first working release

--- a/lang/de-DE.mod_wow_top_weekly_contributors.ini
+++ b/lang/de-DE.mod_wow_top_weekly_contributors.ini
@@ -19,3 +19,23 @@ MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_TIMEOUT_DESC="Wieviel Sekunden soll maximal auf 
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LINK_LABEL="Verlinkung"
 
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LAYOUT_DEFAULT="Standard"
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_PLACE="#"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_NAME="Name"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_CLASS="Klasse"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LEVEL="Level"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_POINTS="Punkte"
+
+COM_MODULES_DISPLAY_FIELDSET_LABEL="Anzeige"
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_THEAD_LABEL="Tabellen-Kopf"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_THEAD_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_PLACE_LABEL="Platz"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_PLACE_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_LEVEL_LABEL="Stufe"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_LEVEL_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_CLASS_LABEL="Klasse"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_CLASS_DESC=""
