--- a/lang/en-GB.mod_wow_top_weekly_contributors.ini
+++ b/lang/en-GB.mod_wow_top_weekly_contributors.ini
@@ -17,3 +17,25 @@ MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_TIMEOUT_LABEL="Timeout"
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_TIMEOUT_DESC="Maximum waiting time for armory server answer (in seconds)."
 
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LINK_LABEL="Linking"
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LAYOUT_DEFAULT="default"
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_PLACE="#"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_NAME="Name"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_CLASS="Class"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LEVEL="Lvl"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_POINTS="Points"
+
+COM_MODULES_DISPLAY_FIELDSET_LABEL="Display"
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_THEAD_LABEL="Table Header"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_THEAD_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_PLACE_LABEL="Place"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_PLACE_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_LEVEL_LABEL="Level"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_LEVEL_DESC=""
+
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_CLASS_LABEL="Class"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DISPLAY_CLASS_DESC=""
