--- a/language/de-DE/de-DE.mod_wow_top_weekly_contributors.ini
+++ b/language/de-DE/de-DE.mod_wow_top_weekly_contributors.ini
@@ -1,23 +1,7 @@
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS = "WoW top Weekly Contributors"
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_DESC = "Zeigt Gildenmitglieder mit den meisten Gildenbeiträgen."
 
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_GUILD_LABEL = "Gildenname"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_REALM_LABEL = "Realm"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LANG_LABEL = "Sprache"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_REGION_LABEL = "Region"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_CACHE_LABEL = "Cache Dauer"
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_CACHE_DESC = "Nach wieviel Minuten sollen die Daten aus dem Armory Neu geladen werden?"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_TIMEOUT_LABEL = "Timeout"
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_TIMEOUT_DESC = "Wieviel Sekunden soll maximal auf Antwort vom Armory Server gewartet werden?"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LINK_LABEL = "Verlinkung"
-
-MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_LAYOUT_DEFAULT = "Standard"
+MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_NOT_FOUND = "Keine wöchentlichen Beiträge gefunden."
 
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_PLACE = "#"
 MOD_WOW_TOP_WEEKLY_CONTRIBUTORS_NAME = "Name"
